--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html>
   <body>
     <h1> Anthony Hardy </h1>
-    <p> This is a test. </p>
+    <p> Welcome to my github statics page! Here you will see my projects and maybe more. </p>
+    <p> These pages are still under construction, as I'm mainly focusing ont he projects at hand. As I go along, I will likely include some more CSS, HTML and Javascript to these pages.</p>
+    <h2> Links: </h2>
+    <a href="homelab.html">Homelab</a>
+    <a href="discordbot.html">Discord bot</a>
+
+
+    <h2> About me </h2>
+    <p> I'm a Computer Science major with a concentration in Cybersecurity. In my freetime, I like to play videogames, run, read and tinker with machines. I do like to program and I think Javascript is cringe(ironic, I know.)</p>
+    <p> I have a tryhackme which I will link to at a later date, I like to use some of my freetime learning blue team material, my goal after college is to get into Network Engineering and/or SOC Analyst positions. My favorite topics are Networking, Homelabbing, and Cybersecurity!</p>
+    <p> I love drinking coffee, my favorite is cafe cubano!</p>
+
+
   </body>
 </html>
