--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p> I have a tryhackme which I will link to at a later date, I like to use some of my freetime learning blue team material, my goal after college is to get into Network Engineering and/or SOC Analyst positions. My favorite topics are Networking, Homelabbing, and Cybersecurity!</p>
     <p> I love drinking coffee, my favorite is cafe cubano!</p>
 
+    <h2> Languages </h2>
+    <p> This is a list of languages and my proficiency. Languages and anthropology are one of my favorite subjects!</p>
+    <p> Chinese, Mandarin: A2-B1 </p>
 
   </body>
 </html>
