--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <p> This is a list of languages and my proficiency. Languages and anthropology are one of my favorite subjects!</p>
     <p> Chinese, Mandarin: A2-B1 </p>
 
+    <body style="background-color: #ffebcd;">
+
   </body>
 </html>
