--- a/homelab.html
+++ b/homelab.html
@@ -2,5 +2,13 @@
   <body>
     <h1> Homelab Project*</h1>
     <p> Hello, welcome to the homelab project page. I will discuss my journey in making my homelab, as well as be informal documentation over the homelab. Official documentation will be linked as it comes along. </p>
+    <h2> Services: </h2>
+    <p> Podman, Nextcloud, Jellyfin, Snort, Splunk, Proxmox, PiVPN, Kubernetes, Ansible.</p>
+
+    <h2> Why did I choose to do this project? </h2>
+    <p> With the advent of subscription services and the fact that I desparately need a project I would actually enjoy, I was intriguied when I first learned about the concept of a homelab. I have always wanted to be able to test out exploits, harden and even just manage server tools in a test environment, all within reach of me, so I delved into what tools I would need and got myself a mini-pc and a switch. The homelab is a versatile project that will not only let me learn but it will also allow me to truly own my media. The recent years, spotify has been paying their artists less, I have also felt that by not owning my music, I cannot truly appreciate it. So I wanted to make my own little streaming service and thought might as well make my own onedrive.</p>
+
+    <h2> What do I hope to achieve with this project? </h2>
+    <p> I hope to have my own cloud storage with a NAS, a media server so I can watch my movies or listen to music without ads and I hope to be able to remote into the network via my raspberry pi that has been collecting dust. I also have other goals that tie into my passion for cybersecurity, I hope to make an environment to mess with Windows AD, set up Splunk to watch my endpoints and mess with custom Snort rules. I'll set up a small Kali VM to mess with exploiting the Windows VM for fun. </p>
   </body>
 </html>
