--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <body>
     <h1> Anthony Hardy </h1>
     <p> Welcome to my github statics page! Here you will see my projects and maybe more. </p>
-    <p> These pages are still under construction, as I'm mainly focusing ont he projects at hand. As I go along, I will likely include some more CSS, HTML and Javascript to these pages.</p>
-    <h2> Links: </h2>
+    <p> These pages are still under construction, as I'm mainly focusing on the projects at hand. As I go along, I will likely include some more CSS, HTML and Javascript to these pages.</p>
+    <h2> Project links: </h2>
     <a href="homelab.html">Homelab</a>
     <a href="discordbot.html">Discord bot</a>
 
